<resources>
    <string name="app_name">Rezeptebuch Bärbel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bärbel´s Rezeptebuch</string>
    <string name="nav_header_subtitle">bergsch.rene(at)gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Einstellungen</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_übersicht">Kategorien</string>
    <string name="menu_rezepte">Rezepte</string>
    <string name="menu_hauptgerichte">Hauptgerichte</string>
    <string name="menu_salate">Salate</string>
    <string name="menu_suppen">Suppen</string>
    <string name="menu_backen">Backen</string>
    <string name="menu_kuchen">Kuchen</string>
    <string name="menu_dips">Dips</string>
    <string name="menu_grillen">Grillen</string>
    <string name="menu_nachtisch">Nachtisch</string>
    <string name="menu_brotaufstrich">Brotaufstrich</string>
    <string name="menu_vorspeise">Vorspeise</string>
    <string name="menu_übersicht_überschrift">Bärbel´s Kategorien</string>
    <string name="menu_rezepte_überschrift">Bärbel´s Rezepte</string>
    <string name="menu_zutaten_überschrift">Bärbel´s Zutaten</string>
    <string name="menu_about_überschrift">Impressum</string>
    <string name="menu_lizenzen_überschrift">Lizenzen</string>
    <string name="menu_about">About</string>
    <string name="überschrift_zuaten">Zutaten:</string>
    <string name="überschrift_anweisungen">Anweisungen:</string>
    <string name="überschrift_sonstiges">Sonstiges:</string>
    <string name="fragment_übersicht">Übersicht</string>
    <string name="fragment_rezepte">Rezepte</string>
    <string name="fragment_zutaten">Zutaten</string>
    <string name="fragment_about">Impressum</string>
    <string name="fragment_lizenzen">Lizenzen</string>
    <string name="share_Rezepte">Rezepte speichern oder laden</string>
    <string name="share_SD">SD Karte</string>
    <string name="share_Handy">Handyspeicher</string>
    <string name="share_GoogleDrive">Google Drive</string>
    <string name="share_sicherung">Sicherung</string>
    <string name="save">speichern</string>
    <string name="cancel">abbrechen</string>
    <string name="share">Share</string>
    <string name="holen">laden</string>
    <string name="about">
Angaben gemäß Paragraph 5 TMG:\n\n
René Bergsch\n
Nideggener Str. 69\n
52385 Nideggen\n\n
Deutschland\n\n\n
Kontakt:\n\n
Telefon: (+49)160-1532089\n
E-Mail: bergsch.rene(at)gmail.com\n\n\n
Verantwortlich für den Inhalt nach Paragraph 55 Abs. 2 RStV:\n
René Bergsch\n
Nideggener Str. 69\n
52385 Nideggen\n\n\n
Copyright:\n
App und Inhalte\n
&#169; 2020 René Bergsch\n\n\n
Haftungsausschluss\n\n
Haftung für Inhalte\n
Die Inhalte unserer Seiten und die App wurden mit größter Sorgfalt erstellt. Der Author übernimmt keinerlei Gewähr für die Aktualität und Funktionalität der bereitgestellten Applikation. Haftungsansprüche gegen den Autor, welche sich auf Schäden materieller oder ideeller Art beziehen, die durch die Nutzung oder Nichtnutzung der dargebotenen Möglichkeiten bzw. durch die Nutzung fehlerhafter und unvollständiger Informationen verursacht wurden, sind grundsätzlich ausgeschlossen, sofern seitens des Autors kein nachweislich vorsätzliches oder grob fahrlässiges Verschulden vorliegt. Der Autor behält es sich ausdrücklich vor, Teile der App oder die gesamte App ohne gesonderte Ankündigung zu verändern, zu ergänzen oder die Veröffentlichung zeitweise oder endgültig einzustellen. Als Diensteanbieter sind wir gemäß Paragraph 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach den Paragraphen 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.\n\n
Haftung für Links\n
Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.\n\n
Urheberrecht\n
Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.
</string>
    <string name="lizenzen_überschrift">
        Apache License\n
        Version 2.0, January 2004\n
        http://www.apache.org/licenses/\n
    </string>
</resources>