<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/menu_übersicht">
        <item
            android:id="@+id/nav_übersicht"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_übersicht">
        </item>
    </item>

    <item android:title="@string/menu_about">
        <menu>
            <item android:id="@+id/nav_about"
                android:icon="@drawable/ic_action_impressum"
                android:title="@string/menu_about_überschrift" />
            <item android:id="@+id/nav_lizenzen"
                android:icon="@drawable/ic_action_lizenzen"
                android:title="@string/menu_lizenzen_überschrift" />
        </menu>
    </item>
</menu>
