<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_zutaten"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rezeptebuchbaerbel.ui.EinzelheitenFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/appBarHeight">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EFDCE7"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp">

            <TextView
                android:id="@+id/listview_ueberschrift"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeMaxTextSize="24dp"
                android:autoSizeMinTextSize="20dp"
                android:autoSizeTextType="uniform"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/menu_zutaten_überschrift"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold">

            </TextView>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/appBarHeight"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/überschrift_zuaten"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtZutaten"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:scrollbars="vertical"
            android:scrollHorizontally="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/überschrift_anweisungen"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtAnweisung"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:scrollbars="vertical"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/überschrift_sonstiges"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtSonstiges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:scrollbars="vertical"
            android:textSize="14sp" />

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>